feat: 한글 해석 별도 입력창 + Gemini 최적화 MD 결과지 다운로드
- 영어/한글 나란히 2열 입력창 (붙여넣기 각 1번씩)
- 한글 없어도 학습 가능 (선택사항, 줄 수 불일치 예외처리)
- 학습 화면: 한글이 있으면 문제로 표시 (수능/내신 재현)
- 문장 목록에 한글 부제목 표시 (보라색 이탤릭)
- 공유링크에 한글 데이터 포함 (하위호환 유지)
- MD 결과지 다운로드: Gemini 분석 최적화 구조로 자동 생성
  - 단계별 정답률, 문장별 상세 기록, 오답 원문
  - Gemini 분석 프롬프트 자동 포함 (후치수식/Syntax Sniper 추천 포함)
- 오답 문장 클립보드 복사 버튼 (Syntax Sniper 연결용)
- 모바일 반응형: 스마트폰에서 2열1열 자동 전환

--- a/index.html
+++ b/index.html
@@ -60,10 +60,18 @@
 
         <div class="teacher-container">
             <div class="input-section">
-                <label for="sentence-input">문장 입력</label>
-                <textarea id="sentence-input"
-                    placeholder="영어 문장을 입력하세요...&#10;예: The quick brown fox jumps over the lazy dog.&#10;&#10;여러 문장을 입력하려면 줄바꿈으로 구분하세요."></textarea>
-
+                <div class="dual-input-row">
+                    <div class="dual-input-col">
+                        <label for="sentence-input">🇺🇸 영어 문장</label>
+                        <textarea id="sentence-input" placeholder="영어 문장 붙여넣기&#10;&#10;The fox jumped over the dog.&#10;She has been studying hard.
+여러 문장은 줄바꿈으로 구분"></textarea>
+                    </div>
+                    <div class="dual-input-col">
+                        <label for="korean-input">🇰🇷 한글 해석 <span class="optional-tag">(선택)</span></label>
+                        <textarea id="korean-input" placeholder="한글 해석 붙여넣기&#10;&#10;여우가 개를 뛰어넘었다.&#10;그녀는 열심히 공부해 왔다.
+없으면 비워두세요"></textarea>
+                    </div>
+                </div>
                 <button class="primary-btn" onclick="addSentences()">
                     <span>➕</span> 문장 추가
                 </button>
@@ -109,11 +117,13 @@
                         <label class="option-label">시도 제한</label>
                         <div class="attempt-mode-options">
                             <label class="radio-pill">
-                                <input type="radio" name="attempt-mode" id="attempt-unlimited" checked onchange="toggleAttemptCount()">
+                                <input type="radio" name="attempt-mode" id="attempt-unlimited" checked
+                                    onchange="toggleAttemptCount()">
                                 <span>♾️ 맞출 때까지</span>
                             </label>
                             <label class="radio-pill limit-mode">
-                                <input type="radio" name="attempt-mode" id="attempt-limited" onchange="toggleAttemptCount()">
+                                <input type="radio" name="attempt-mode" id="attempt-limited"
+                                    onchange="toggleAttemptCount()">
                                 <span>❌ 틀리면 스킵</span>
                             </label>
                         </div>
@@ -314,6 +324,12 @@
             <div class="result-actions">
                 <button class="secondary-btn" onclick="showModeSelect()">
                     <span>🏠</span> 홈으로
+                </button>
+                <button class="md-btn" onclick="downloadMD()">
+                    <span>📄</span> MD 저장
+                </button>
+                <button class="copy-wrong-btn" onclick="copyWrongSentences()">
+                    <span>📋</span> 오답 복사
                 </button>
                 <button class="primary-btn" onclick="restartLearning()">
                     <span>🔄</span> 다시 하기
