fix: 결과지 화면 개선 + 버튼 정리
- 결과지 max-height 400px 제거  전체 페이지 자연 스크롤
- 캡쳐 버튼(중복) 제거, 오답복사(중복) 제거
- MD 복사(클립보드Gemini 붙여넣기용) / MD 저장(파일보관용) 2개로 정리

--- a/index.html
+++ b/index.html
@@ -325,11 +325,12 @@
                 <button class="secondary-btn" onclick="showModeSelect()">
                     <span>🏠</span> 홈으로
                 </button>
-                <button class="md-btn" onclick="downloadMD()">
-                    <span>📄</span> MD 저장
+                <button class="md-btn" onclick="copyMDReport()">
+                    <span>📋</span> MD 복사
                 </button>
-                <button class="copy-wrong-btn" onclick="copyWrongSentences()">
-                    <span>📋</span> 오답 복사
+                <button class="md-btn" onclick="downloadMD()"
+                    style="background: linear-gradient(135deg, #6366f1 0%, #4f46e5 100%)">
+                    <span>📄</span> MD 저장
                 </button>
                 <button class="primary-btn" onclick="restartLearning()">
                     <span>🔄</span> 다시 하기
